languages/io-automaton-fe/src/test/resources/invalid/ReactionWithAlternatives.ioautomaton
package invalid;

automaton ReactionWithAlternatives {

    input int i;
    output int a;

	state Idle;	
	initial Idle / {a = alt{1,2,3}};
	
	Idle / {a = alt{2,5,7}};
}